Updated to latest rules and fixed css on tablets

--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ svg {
     text-shadow: 2px 2px #180924;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 900px) {
     html,
     body {
         max-width: 100%;
@@ -202,6 +202,7 @@ svg {
     }
     .check-container {
         width: 100%;
+        text-align: center;
     }
     .checkblock {
         width: 45%;
